# short_and_sweet

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
src/: docker-compose.yaml  schemas.py
src/ai/bertopic/: Dockerfile  requirements.txt
src/ai/bertopic/app/: endpoint.py  load_dependencies.py  main.py  schemas.py
src/ai/destilbert/: Dockerfile  requirements.txt
src/ai/destilbert/app/: main.py
src/ai/distilbert/: requirements.txt
src/ai/distilbert/app/: endpoint.py  load_dependencies.py  main.py
src/backend/: Dockerfile  requirements.txt
src/backend/app/: __init__.py  cache_management.py  endpoints.py  main.py  reviews.py  routers.py  schemas.py  scrape.py  scrape_endpoint.py  setup.py  utils.py
src/backend/app/configs/: backend.json  endpoints.json  errors.json  redis.json
src/frontend/: Dockerfile  package-lock.json  package.json
src/frontend/app/: .env  index.html  package-lock.json  package.json  vite.config.ts
src/frontend/app/src/: App.tsx  (+1 more)
src/frontend/src/: App.tsx  EntryField.tsx  ReviewFetcher.tsx  UrlInput.tsx
src/model/: Dockerfile
src/model/app/: __init__.py  model_router.py  schemas.py
src/model_training/: model_router.py
src/models/app/: main.py
src/reviews_retrieval/: Dockerfile  preprocessing.py  requirements.txt  reviews.py  scrape.py  scrape_endpoint.py
src/reviews_retrieval/app/: reviews.py  scrape.py  scrape_endpoint.py
src/web_app/: index.html  script.js  server.js  styles.css  test.mjs  utils.mjs
tests/ai/: speed_test.py
tests/backend/: cache_managment.py  utils.py  utils_endpoints.py
(+17 files in other folders)
