[tool.poetry]
name = "short-and-sweet"
version = "0.1.0"
description = ""
authors = ["bpietrzak <bartoszekmmmm@gmail.com>"]
readme = "README.md"
packages = [{include = "short_and_sweet"}]

[tool.poetry.dependencies]
python = "^3.11"
google-play-scraper = "^1.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
