[tool.poetry]
name = "short-and-sweet"
version = "0.1.0"
description = ""
authors = ["bpietrzak <bartoszekmmmm@gmail.com>"]
readme = "README.md"
packages = [{include = "short_and_sweet"}]

[tool.poetry.dependencies]
python = "^3.11"
google-play-scraper = "^1.2.4"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
