[tool.poetry]
name = "short-and-sweet"
version = "0.1.0"
description = ""
authors = ["."]
readme = "README.md"
packages = [{include = "short_and_sweet"}]

[tool.poetry.dependencies]
python = "^3.11"
google-play-scraper = "^1.2.4"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
bertopic = "^0.15.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
